<resources>
    <string name="app_name">Songle</string>
    <string name="title_activity_maps">Map</string>
    <string name="dialog_difficulty">Select Difficulty</string>
    <string name="dialog_new_game_message">Starting a new game will reset your progress so far. Do you wish to continue?</string>
    <string name="dialog_new_game_title">New Game</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="dialog_lyric_title">Lyric selected</string>
    <string name="dialog_lyric_message">Select from the options below.</string>
    <string-array name="difficulties">
        <item>Painful</item>
        <item>Hard</item>
        <item>Medium</item>
        <item>Easy</item>
        <item>Extremely Easy</item>
    </string-array>
    <string-array name="connection_settings">
        <item>Use only WiFi</item>
        <item>Use Data &amp; WiFi</item>
...

    <string name="new_game_toast">New Game Started!</string>
    <string name="continue_toast">Game continued!</string>
    <string name="difficulty_easy">5</string>
    <string name="score_image_description">Score: </string>
    <string name="dialog_submit_title">Guess the Song</string>
    <string name="submit">Submit</string>
    <string name="dialog_complete_title">Congratulations!</string>
    <string name="subtitle_main">Test your music knowledge while exploring George Square Campus</string>
    <string name="songs_not_loaded_error">Songs not loaded. Check your connection.</string>
    <string name="lyrics_connection_error">Lyrics not loaded. Check your connection.</string>
    <string name="distance_image_description">Distance walked this song: </string>
    <string name="dialog_skip_song_title">Skip Song</string>
    <string name="skip">Skip</string>
    <string name="title_activity_lyrics">Lyrics Found</string>
    <string name="internet_connection_toast">You need an internet connection to play the game!</string>
    <string name="toast_connection">Please check your connection, for Songle to download the songs</string>
    <string name="dialog_skipped_msg" formatted="false">You\'ve skipped the song. \nYou\'ve walked %dm failing to guess the song.</string>
    <string name="dialog_correct_msg" formatted="false">You\'ve progressed to the next song! \nYou\'ve walked %dm earning you %d bonus points trying to guess: \n%s - %s.</string>
    <string name="toast_location_error">Please open location services before trying to zoom to your location</string>
...
