...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Subtitle">

        <ImageButton
            android:id="@+id/NewGameButton"
            style="@style/ButtonsMain"
            android:contentDescription="New Game"
            app:srcCompat="@drawable/new_game" />

        <ImageButton
            android:id="@+id/ContinueButton"
...
